# b2b-data-bridge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  b2b-data-bridge.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: settings.yaml
docs/: CLIENT_GUIDE.md  FILE_FORMAT_SPECIFICATION.md  GO_LIVE_RUNBOOK.md  INTEGRATION_TEST_PLAN.md  PROJECT_PROPOSAL.md  SFTP_SETUP_GUIDE.md  architecture.md
samples/inbound/: ORDERS_sample.csv
samples/outbound/: PRICING_sample.csv  PRODUCTS_sample.csv  STOCK_sample.csv
scripts/: build.sh
src/b2b_data_bridge/: __main__.py  config.py  export.py  files.py  main.py  models.py  orders.py  sftp.py  validation.py
tests/: conftest.py  test_config.py  test_file_generation.py  test_filename.py  test_inbound.py  test_integration.py  test_mapping.py  test_models.py  test_transport.py  test_validation.py
